--- a/frontend/src/app/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/profile/my-clients/client-card/client-card.component.html
@@ -12,48 +12,48 @@
       <br/>
       <div>
         <div>
-          <h3>ID - {{client?.id}}</h3>
+          <h3>ID - {{profile?.id}}</h3>
         </div>
-         <div class="row" style="border: solid 1px black; padding: 5px; ">
-           <div class="col-sm-5" >
-             <div class="row">
-               <h2 class="font-weight-bolder text-uppercase">&nbsp;&nbsp; &nbsp;{{client?.firstName}} {{client?.surname}} {{client?.patronymic}}</h2>
-               <h2 >&nbsp;&nbsp; &nbsp;{{gender}}</h2>
-             </div>
+        <div class="row" style="border: solid 1px black; padding: 5px; ">
+          <div class="col-sm-5">
+            <div class="row">
+              <h2 class="font-weight-bolder text-uppercase">&nbsp;&nbsp; &nbsp;{{profile?.firstName}}
+                {{profile?.surname}} {{profile?.patronymic}}</h2>
+              <h2>&nbsp;&nbsp; &nbsp;{{gender}}</h2>
+            </div>
 
 
-
-             <div class="form-group row">
-               <label for="inputEmail3MD" class="col-sm-2 col-form-label">Телефон</label>
-               <div class="col-sm-10">
-                 <div class="input-group">
-                   <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD" [disabled]="true"
-                          [(ngModel)]="client.phoneNumber"  prefix="+7" mask="(000) 000 00 00">
-                   <div class="input-group-append">
-                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
-                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
-                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-skype text-info"></i></span>
-                   </div>
-                 </div>
-               </div>
-             </div>
-             <div class="form-group row">
-               <label for="mail" class="col-sm-2 col-form-label">e-mail:</label>
-               <div class="col-sm-10">
-                 <div class="input-group">
-                   <input type="text" class="form-control" placeholder="e-mail" id="mail" [disabled]="true"
-                          [(ngModel)]="client.email" >
-                   <div class="input-group-append">
-                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-google-plus text-info"></i></span>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-           <div class="col-sm" style="text-align: right">
-             <a ><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
-           </div>
-         </div>
+            <div class="form-group row">
+              <label for="inputEmail3MD" class="col-sm-2 col-form-label">Телефон</label>
+              <div class="col-sm-10">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD" [disabled]="true"
+                         [(ngModel)]="profile.phoneNumber" prefix="+7" mask="(000) 000 00 00">
+                  <div class="input-group-append">
+                    <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
+                    <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
+                    <span class="input-group-text"><i aria-hidden="true" class="fa fa-skype text-info"></i></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="mail" class="col-sm-2 col-form-label">e-mail:</label>
+              <div class="col-sm-10">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="e-mail" id="mail" [disabled]="true"
+                         [(ngModel)]="profile.email">
+                  <div class="input-group-append">
+                    <span class="input-group-text"><i aria-hidden="true" class="fa fa-google-plus text-info"></i></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm" style="text-align: right">
+            <a (click)="openModal(template)"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-sm">
@@ -113,6 +113,111 @@
           </pagination>
         </div>
       </div>
-   </div>
+
+
+      <ng-template #template class="modal-lg">
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Редактировать</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="openModal2(template3)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="col-sm row">
+            <div class="col-sm">
+              <div>
+                <label class="col-sm col-form-label">Имя<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" [(ngModel)]="formClient.firstName" [disabled]="!rgRoles">
+                <div *ngIf="!formClient.firstName" class="text-danger">
+                  <div *ngIf="!formClient.firstName" translate>claim.requiredField</div>
+                </div>
+              </div>
+              <div>
+                <label class="col-sm col-form-label">Фамилия<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" [(ngModel)]="formClient.surname" [disabled]="true">
+              </div>
+              <div>
+                <label class="col-sm col-form-label">Отчество<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" [(ngModel)]="formClient.patronymic" [disabled]="true">
+              </div>
+              <div>
+                <label class="col-sm col-form-label">ID клиента<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" disabled [(ngModel)]="formClient.id" [disabled]="true">
+              </div>
+
+            </div>
+            <div class="col-sm">
+              <div>
+                <label class="col-sm col-form-label">Телефон<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" prefix="+7" mask="(000) 000 00 00" [disabled]="!rgRoles" (input)="getDataByPhoneNumber($event.target.value)"
+                       [(ngModel)]="formClient.phoneNumber">
+                <div *ngIf="!formClient.phoneNumber" class="text-danger">
+                  <div *ngIf="!formClient.phoneNumber" translate>claim.requiredField</div>
+                </div>
+              </div>
+              <div>
+                <label class="col-sm col-form-label">Доп телефон<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" [disabled]="true">
+              </div>
+              <div>
+                <label class="col-sm col-form-label">Почта<span class="text-danger">&nbsp;*</span></label>
+                <input type="text" class="col-sm form-control" name="nameEn" [(ngModel)]="formClient.email" [disabled]="true">
+              </div>
+              <div >
+                <label class="col-sm col-form-label">Пол</label>
+
+                <div class="custom-control custom-checkbox" [disabled]="!rgRoles">
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" class="custom-control-input" id="defaultInline1" value="MALE" [disabled]="!rgRoles"
+                           name="inlineDefaultRadiosExample" [(ngModel)]="formClient.gender">
+                    <label class="custom-control-label" for="defaultInline1">муж.</label>
+                  </div>
+
+                  <!-- Default inline 2-->
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" class="custom-control-input" id="defaultInline2" value="FEMALE" [disabled]="!rgRoles"
+                           name="inlineDefaultRadiosExample" [(ngModel)]="formClient.gender">
+                    <label class="custom-control-label" for="defaultInline2">жен.</label>
+                  </div>
+
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-sm" style="text-align: right">
+            <button type="button" (click)="submit()" class="btn btn-primary" style="margin: 10px">
+              Сохранить
+            </button>
+            <button type="button" class="btn btn-light" (click)="openModal2(template3)" style="margin: 10px">
+              Отмена
+            </button>
+ </div>
+        </div>
+      </ng-template>
+
+
+      <ng-template #template3>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Внимание</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef2.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Внесенные данные не сохранены, данные будут потеряны. Покинуть страницу?
+        </div>
+        <div class="col-sm" style="text-align: right">
+          <button type="button" class="btn btn-primary" (click)="closeModal()" style="margin: 10px">
+            Подтвердить
+          </button>
+          <button type="button" class="btn btn-light" (click)="modalRef2.hide()" style="margin: 10px">
+            Отмена
+          </button>
+        </div>
+      </ng-template>
+    </div>
   </div>
 </div>
