--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <ul class="nav nav-tabs" id="myTab2" role="tablist">
-        <li class="nav-item" *ngIf="false">
+        <li class="nav-item" >
           <a class="nav-link " id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
              aria-selected="true">Мои клиенты</a>
         </li>
@@ -102,7 +102,7 @@
         </li>
       </ul>
       <div class="tab-content" id="myTabContent2">
-        <div class="tab-pane fade " id="home" role="tabpanel" aria-labelledby="home-tab"  *ngIf="false">
+        <div class="tab-pane fade " id="home" role="tabpanel" aria-labelledby="home-tab" >
           <app-my-clients></app-my-clients>
         </div>
         <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab" *ngIf="agentRoles || rgRoles">
@@ -110,9 +110,9 @@
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" *ngIf="agentRoles || rgRoles">
           <app-my-claims></app-my-claims>
-
         </div>
       </div>
     </div>
+
   </div>
 </div>
