--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,5 +2,6 @@
   <app-nav></app-nav>
   <router-outlet [hidden]="loading"></router-outlet>
   <toast-messages></toast-messages>
+  <ngx-ui-loader></ngx-ui-loader>
   <app-footer></app-footer>
 </div>
