--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -1,4 +1,4 @@
-<div class="card-body card-bg">
+<div class="card-body card-bg" ngxUiLoaderBlurred>
   <div class="card">
     <div class="card-body">
       <h4 translate>claim.searchClaim</h4>
@@ -67,11 +67,6 @@
           <input type="text" id="form1" class="form-control" [(ngModel)]="formData.textSearch">
         </div>
       </div>
-
-      <div class="loader" *ngIf="loading" style="text-align: center">
-        <i class="fa fa-spinner fa-pulse fa-fw fa-2x"></i>
-      </div>
-      <br>
 
       <div class="row">
         <div class="col-sm">
