--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1,4 +1,4 @@
-<div class="card-body card-bg">
+<div class="card-body card-bg" ngxUiLoaderBlurred>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="fillClaims-tab" data-toggle="tab" href="#fillClaims" role="tab"
@@ -20,10 +20,7 @@
     <!--    </li>-->
   </ul>
   <div class="tab-content" id="myTabContent" [formGroup]="applicationForm">
-    <div class="loader" *ngIf="loading" style="text-align: center">
-      <i class="fa fa-spinner fa-pulse fa-fw fa-2x"></i>
-    </div>
-    <br>
+
     <div class="tab-pane fade show active" id="fillClaims" role="tabpanel" aria-labelledby="fillClaims-tab">
       <div class="card-body">
         <div class="row">
