--- a/frontend/src/app/components/home/calendar/calendar.component.html
+++ b/frontend/src/app/components/home/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
-  <div class="col-md-4">
+  <div class="col-sm">
     <div class="btn-group">
       <div
         class="btn btn-primary"
@@ -28,10 +28,10 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-sm">
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'ru' }}</h3>
   </div>
-  <div class="col-md-4">
+  <div class="col-sm">
     <div class="btn-group">
       <div
         class="btn btn-primary"
